# Altrasia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pytest.ini
backend/: README.md  pyproject.toml
backend/altrasia/: __init__.py  approvals.py  banter_runner.py  briefing.py  character_authoring.py  cli.py  commission_notify.py  commission_runner.py  commissions.py  commons.py  config.py  conversation_runner.py  debate_activity.py  debate_runner.py  event_bus.py  evidence.py  map_apply.py  map_artifacts.py  map_authoring.py  map_layout_invariants.py  map_layout_validator.py  map_world_bootstrap.py  operator_settings.py  services.py  world_config.py  world_geography.py  world_package.py
backend/altrasia/api/: app.py  deps.py
backend/altrasia/communication/: __init__.py  phone.py
backend/altrasia/domain/: inventory.py  narrative_presence.py  narrative_presence_llm.py  navigation.py  position3d.py  presence.py  presence_announce.py  presence_ops.py  shared_stash.py  spatial_graph.py
backend/altrasia/fixtures/: loader.py  memory_scale.py
backend/altrasia/inference/: client.py  comfyui.py  mock_llm.py  model_catalog.py  openai_compat.py  profiles.py  queue.py  tool_calls.py
backend/altrasia/memory/: embeddings.py  fixture_sync.py  org_recall.py  service.py  strip_reasoning.py
backend/altrasia/orchestrator/: addressing_policy.py  banter_gates.py  briefing_chain.py  chat_messages.py  conversation_resolution.py  discussion_deliverables.py  discussion_judgement.py  engine.py  floor_cues.py  generation_policy.py  idle_scheduler.py  (+7 more)
(+410 files in other folders)
